--- a/lAWANIYA.ipynb
+++ b/lAWANIYA.ipynb
@@ -4,7 +4,7 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "authorship_tag": "ABX9TyNejM7fuXKBfSv2C+4kJleY",
+      "authorship_tag": "ABX9TyOucW4+x6kFON0Q7W4+hbzI",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -72,7 +72,7 @@
         "id": "b83fju0FKSj5",
         "outputId": "67ee9fbc-3d75-4d4e-df6f-d4e137e17792"
       },
-      "execution_count": 32,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -116,10 +116,10 @@
         "dis_fries=price_of_item5*dis_on_fries/100\n",
         "amount_of_fries=price_of_item5-dis_fries\n",
         "\n",
-        "total_bill=(price_of_item1+price_of_item2+price_of_item3+price_of_item4+price_of_item5)\n",
-        "discount=10\n",
-        "total_dis=total_bill*discount/100\n",
-        "payble_bill=total_bill-total_dis\n",
+        "total_bill=(amount_of_pizza+amount_of_burger+amount_of_coke+amount_of_cold_coffee+amount_of_fries)\n",
+        "discount_on_total_bill=10\n",
+        "total_dis=total_bill*discount_on_total_bill/100\n",
+        "payable_bill=total_bill-total_dis\n",
         "\n",
         "print(\".........cool cafe........\")\n",
         "print(\"...receipt...\")\n",
@@ -143,19 +143,19 @@
         "print(\"dis_fries =\",dis_fries)\n",
         "print(\"amount_of_fries :\",amount_of_fries)\n",
         "print(\"......\")\n",
-        "print(\"total_bill\",total_bill)\n",
-        "print(\"total dis\",total_dis)\n",
+        "print(\"total_bill :\",total_bill)\n",
+        "print(\"total dis :\",total_dis)\n",
         "print(\".......\")\n",
-        "print(\"payble_bill\",payble_bill)\n"
+        "print(\"payable_bill :\",payable_bill)\n"
       ],
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
         "id": "NiHEtN47LqGa",
-        "outputId": "0dc0eb4d-84f1-46c0-ed44-2aae6d8a9613"
+        "outputId": "9b038abb-0783-4d61-caf5-cb3831f6cd2d"
       },
-      "execution_count": 31,
+      "execution_count": 33,
       "outputs": [
         {
           "output_type": "stream",
@@ -183,10 +183,10 @@
             "dis_fries = 12.0\n",
             "amount_of_fries : 108.0\n",
             "......\n",
-            "total_bill 1000\n",
-            "total dis 100.0\n",
+            "total_bill : 900.0\n",
+            "total dis : 90.0\n",
             ".......\n",
-            "payble_bill 900.0\n"
+            "payable_bill : 810.0\n"
           ]
         }
       ]
@@ -199,7 +199,7 @@
       "metadata": {
         "id": "MpyzKZnAM9CZ"
       },
-      "execution_count": 2,
+      "execution_count": null,
       "outputs": []
     }
   ]
