--- a/lAWANIYA.ipynb
+++ b/lAWANIYA.ipynb
@@ -4,7 +4,7 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "authorship_tag": "ABX9TyOucW4+x6kFON0Q7W4+hbzI",
+      "authorship_tag": "ABX9TyOlwZ4rhSpxKjOGRsXyD232",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -115,6 +115,9 @@
         "dis_on_fries=10\n",
         "dis_fries=price_of_item5*dis_on_fries/100\n",
         "amount_of_fries=price_of_item5-dis_fries\n",
+        "name=\"vaishnavi\"\n",
+        "house_no=3345\n",
+        "mobile_no=7302080109\n",
         "\n",
         "total_bill=(amount_of_pizza+amount_of_burger+amount_of_coke+amount_of_cold_coffee+amount_of_fries)\n",
         "discount_on_total_bill=10\n",
@@ -146,16 +149,21 @@
         "print(\"total_bill :\",total_bill)\n",
         "print(\"total dis :\",total_dis)\n",
         "print(\".......\")\n",
-        "print(\"payable_bill :\",payable_bill)\n"
+        "print(\"payable_bill :\",payable_bill)\n",
+        "print(\"----------delivery_address-------\")\n",
+        "print(\"name\",name)\n",
+        "print(\"house_no: \",house_no)\n",
+        "print(\"mobile_no\",mobile_no)\n",
+        "\n"
       ],
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
         "id": "NiHEtN47LqGa",
-        "outputId": "9b038abb-0783-4d61-caf5-cb3831f6cd2d"
+        "outputId": "8509ea8a-cb3e-448d-d962-aa601ced3316"
       },
-      "execution_count": 33,
+      "execution_count": 6,
       "outputs": [
         {
           "output_type": "stream",
@@ -186,7 +194,11 @@
             "total_bill : 900.0\n",
             "total dis : 90.0\n",
             ".......\n",
-            "payable_bill : 810.0\n"
+            "payable_bill : 810.0\n",
+            "----------delivery_address-------\n",
+            "name vaishnavi\n",
+            "house_no:  3345\n",
+            "mobile_no 7302080109\n"
           ]
         }
       ]
@@ -194,10 +206,107 @@
     {
       "cell_type": "code",
       "source": [
+        "item1=input(\"enter your item: \")\n",
+        "item2=input(\"enter your item: \")\n",
+        "item3=input(\"enter your item: \")\n",
+        "item4=input(\"enter your item: \")\n",
+        "item5=input(\"enter your item: \")"
+      ],
+      "metadata": {
+        "id": "4RZZBM8_WMU7",
+        "outputId": "cfeaa938-bfe0-4e6b-9b1e-80c94ed27c3d",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
+      },
+      "execution_count": 14,
+      "outputs": [
+        {
+          "name": "stdout",
+          "output_type": "stream",
+          "text": [
+            "enter your item: pizza\n",
+            "enter your item: burger\n",
+            "enter your item: coke\n",
+            "enter your item: cold_coffee]\n",
+            "enter your item: fries\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "a=int(input(\"enter value of a\"))\n",
+        "b=int(input(\"enter value of b\"))\n",
+        "sum=a+b\n",
+        "print(\"sum\",sum)\n",
+        "multiply=a*b\n",
+        "print(\"multiply\", multiply)\n",
+        "divide=a/b\n",
+        "print(\"divide\",divide)\n",
+        "subtract=a-b\n",
+        "print(\"subtract\",subtract)\n",
         "\n"
       ],
       "metadata": {
-        "id": "MpyzKZnAM9CZ"
+        "id": "5XvRqxjdY55-",
+        "outputId": "ff7403dc-d498-4972-e969-bd8822910afb",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
+      },
+      "execution_count": 22,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "enter value of a40\n",
+            "enter value of b45\n",
+            "sum 85\n",
+            "multiply 1800\n",
+            "divide 0.8888888888888888\n",
+            "subtract -5\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "x=int(input(\"enter number\"))\n",
+        "\n",
+        "if x % 2==0:\n",
+        "  print(\"even\")\n",
+        "else:\n",
+        "  print(\"odd\")\n",
+        "\n"
+      ],
+      "metadata": {
+        "id": "8VKcaYttdlat",
+        "outputId": "03600185-c424-42c2-8592-a5ffa636dfe5",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
+      },
+      "execution_count": 25,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "enter number8\n",
+            "even\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [],
+      "metadata": {
+        "id": "_e-yKHi4Y1L-"
       },
       "execution_count": null,
       "outputs": []
