--- a/lAWANIYA.ipynb
+++ b/lAWANIYA.ipynb
@@ -4,7 +4,7 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "authorship_tag": "ABX9TyOJHBYWbcal1GZ3vkKzTQP8",
+      "authorship_tag": "ABX9TyPCvCg2Yt5u55CHMRuo6shB",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -100,41 +100,37 @@
         "price_of_item4=200\n",
         "item5=\"fries\"\n",
         "price_of_item5=120\n",
-        "\n",
+        "discount_on_pizza=50\n",
+        "discount_on_burger=10\n",
+        "discount_on_coke=8\n",
+        "discount_on_cold_coffee=20\n",
+        "discount_on_fries=12\n",
         "name=\"vaishnavi\"\n",
         "house_no=3345\n",
         "mobile_no=7302080109\n",
         "total_bill=(price_of_item1+price_of_item2+price_of_item3+price_of_item4+price_of_item5)\n",
-        "discount_on_total_bill=10\n",
-        "total_dis=total_bill*discount_on_total_bill/100\n",
-        "payable_bill=total_bill-total_dis\n",
+        "total_discount=(discount_on_pizza+discount_on_burger+discount_on_coke+discount_on_cold_coffee+discount_on_fries)\n",
+        "payable_bill=total_bill-total_discount\n",
         "\n",
         "print(\".........cool cafe........\")\n",
         "print(\"...receipt...\")\n",
         "print(item1,\"=\",price_of_item1)\n",
-        "print(\"dis_pizza =\",dis_pizza)\n",
-        "print(\"amount_of_pizza :\",amount_of_pizza)\n",
-        "print(\".....\")\n",
         "print(item2,\"=\",price_of_item2)\n",
-        "print(\"dis_burger =\",dis_burger)\n",
-        "print(\"amount_of_burger :\",amount_of_burger)\n",
-        "print(\".....\")\n",
         "print(item3,\"=\",price_of_item3)\n",
-        "print(\"dis_coke =\",dis_coke)\n",
-        "print(\"amount_of_coke :\",amount_of_coke)\n",
-        "print(\".....\")\n",
         "print(item4,\"=\",price_of_item4)\n",
-        "print(\"dis_cold_coffee =\",dis_cold_coffee)\n",
-        "print(\"amount_of_cold_coffee :\",amount_of_cold_coffee)\n",
-        "print(\".....\")\n",
         "print(item5,\"=\",price_of_item5)\n",
-        "print(\"dis_fries =\",dis_fries)\n",
-        "print(\"amount_of_fries :\",amount_of_fries)\n",
-        "print(\"......\")\n",
+        "print(\"-------------\")\n",
+        "print(\"dis on pizza: \",discount_on_pizza)\n",
+        "print(\"dis on burger: \",discount_on_burger)\n",
+        "print(\"dis on coke: \",discount_on_coke)\n",
+        "print(\"dis on cold coffee: \",discount_on_cold_coffee)\n",
+        "print(\"dis on fries: \",discount_on_fries)\n",
+        "print(\"------------\")\n",
         "print(\"total_bill :\",total_bill)\n",
-        "print(\"total dis :\",total_dis)\n",
-        "print(\".......\")\n",
+        "print(\"total discount:\",total_discount)\n",
+        "print(\"---------\")\n",
         "print(\"payable_bill :\",payable_bill)\n",
+        "print(\"-------------------\")\n",
         "print(\"----------delivery_address-------\")\n",
         "print(\"name\",name)\n",
         "print(\"house_no: \",house_no)\n",
@@ -146,9 +142,9 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "NiHEtN47LqGa",
-        "outputId": "8509ea8a-cb3e-448d-d962-aa601ced3316"
+        "outputId": "3ed8f656-c4e8-4f1f-b36e-46767b4c6732"
       },
-      "execution_count": null,
+      "execution_count": 6,
       "outputs": [
         {
           "output_type": "stream",
@@ -157,29 +153,22 @@
             ".........cool cafe........\n",
             "...receipt...\n",
             "pizza = 500\n",
-            "dis_pizza = 50.0\n",
-            "amount_of_pizza : 450.0\n",
-            ".....\n",
             "burger = 100\n",
-            "dis_burger = 10.0\n",
-            "amount_of_burger : 90.0\n",
-            ".....\n",
             "coke = 80\n",
-            "dis_coke = 8.0\n",
-            "amount_of_coke : 72.0\n",
-            ".....\n",
             "cold_coffee = 200\n",
-            "dis_cold_coffee = 20.0\n",
-            "amount_of_cold_coffee : 180.0\n",
-            ".....\n",
             "fries = 120\n",
-            "dis_fries = 12.0\n",
-            "amount_of_fries : 108.0\n",
-            "......\n",
-            "total_bill : 900.0\n",
-            "total dis : 90.0\n",
-            ".......\n",
-            "payable_bill : 810.0\n",
+            "-------------\n",
+            "dis on pizza:  50\n",
+            "dis on burger:  10\n",
+            "dis on coke:  8\n",
+            "dis on cold coffee:  20\n",
+            "dis on fries:  12\n",
+            "------------\n",
+            "total_bill : 1000\n",
+            "total discount: 100\n",
+            "---------\n",
+            "payable_bill : 900\n",
+            "-------------------\n",
             "----------delivery_address-------\n",
             "name vaishnavi\n",
             "house_no:  3345\n",
@@ -191,30 +180,51 @@
     {
       "cell_type": "code",
       "source": [
-        "item1=input(\"enter your item: \")\n",
-        "item2=input(\"enter your item: \")\n",
-        "item3=input(\"enter your item: \")\n",
-        "item4=input(\"enter your item: \")\n",
-        "item5=input(\"enter your item: \")"
+        "item1=input(\" item1: \")\n",
+        "item2=input(\" item2: \")\n",
+        "item3=input(\" item3: \")\n",
+        "item4=input(\" item4: \")\n",
+        "item5=input(\" item5: \")\n",
+        "item1=int(input(\" price of pizza: \"))\n",
+        "item2=int(input(\" price of burger: \"))\n",
+        "item3=int(input(\" price of coke: \"))\n",
+        "item4=int(input(\" price of cold coffee: \"))\n",
+        "item5=int(input(\" price of fries: \"))\n",
+        "item1=int(input(\"discount on pizza: \"))\n",
+        "item2=int(input(\"discount on burger: \"))\n",
+        "item3=int(input(\"discount on coke: \"))\n",
+        "item4=int(input(\"discount on cold coffee: \"))\n",
+        "item5=int(input(\"discount on fries: \"))\n",
+        "\n"
       ],
       "metadata": {
         "id": "4RZZBM8_WMU7",
-        "outputId": "cfeaa938-bfe0-4e6b-9b1e-80c94ed27c3d",
+        "outputId": "d3764279-56f2-4480-98c8-067d171662e5",
         "colab": {
           "base_uri": "https://localhost:8080/"
         }
       },
-      "execution_count": null,
+      "execution_count": 12,
       "outputs": [
         {
           "name": "stdout",
           "output_type": "stream",
           "text": [
-            "enter your item: pizza\n",
-            "enter your item: burger\n",
-            "enter your item: coke\n",
-            "enter your item: cold_coffee]\n",
-            "enter your item: fries\n"
+            " item1: pizza\n",
+            " item2: burger\n",
+            " item3: coke\n",
+            " item4: cold coffee\n",
+            " item5: fries\n",
+            " price of pizza: 500\n",
+            " price of burger: 100\n",
+            " price of coke: 80\n",
+            " price of cold coffee: 200\n",
+            " price of fries: 120\n",
+            "discount on pizza: 50\n",
+            "discount on burger: 10\n",
+            "discount on coke: 8\n",
+            "discount on cold coffee: 20\n",
+            "discount on fries: 12\n"
           ]
         }
       ]
