--- a/lAWANIYA.ipynb
+++ b/lAWANIYA.ipynb
@@ -4,7 +4,7 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "authorship_tag": "ABX9TyPCvCg2Yt5u55CHMRuo6shB",
+      "authorship_tag": "ABX9TyPF0bM8m5J82GGuwI35jeFF",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -144,7 +144,7 @@
         "id": "NiHEtN47LqGa",
         "outputId": "3ed8f656-c4e8-4f1f-b36e-46767b4c6732"
       },
-      "execution_count": 6,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -186,7 +186,7 @@
         "item4=input(\" item4: \")\n",
         "item5=input(\" item5: \")\n",
         "item1=int(input(\" price of pizza: \"))\n",
-        "item2=int(input(\" price of burger: \"))\n",
+        "item2=int(input(\" price of burger:  \"))\n",
         "item3=int(input(\" price of coke: \"))\n",
         "item4=int(input(\" price of cold coffee: \"))\n",
         "item5=int(input(\" price of fries: \"))\n",
@@ -195,20 +195,25 @@
         "item3=int(input(\"discount on coke: \"))\n",
         "item4=int(input(\"discount on cold coffee: \"))\n",
         "item5=int(input(\"discount on fries: \"))\n",
+        "bill=int(input(\"total bill= \"))\n",
+        "dis=int(input(\"total discount= \"))\n",
+        "payable_amount=int(input(\"payable amount= \"))\n",
+        "\n",
+        "\n",
         "\n"
       ],
       "metadata": {
         "id": "4RZZBM8_WMU7",
-        "outputId": "d3764279-56f2-4480-98c8-067d171662e5",
+        "outputId": "fd1572de-018f-4592-d2b6-e0dc3ab8a4c9",
         "colab": {
           "base_uri": "https://localhost:8080/"
         }
       },
-      "execution_count": 12,
+      "execution_count": 6,
       "outputs": [
         {
-          "name": "stdout",
           "output_type": "stream",
+          "name": "stdout",
           "text": [
             " item1: pizza\n",
             " item2: burger\n",
@@ -216,7 +221,7 @@
             " item4: cold coffee\n",
             " item5: fries\n",
             " price of pizza: 500\n",
-            " price of burger: 100\n",
+            " price of burger:  100\n",
             " price of coke: 80\n",
             " price of cold coffee: 200\n",
             " price of fries: 120\n",
@@ -224,7 +229,11 @@
             "discount on burger: 10\n",
             "discount on coke: 8\n",
             "discount on cold coffee: 20\n",
-            "discount on fries: 12\n"
+            "discount on fries: 12\n",
+            "total bill= 1000\n",
+            "total discount= 100\n",
+            "payable amount= 900\n",
+            "---------\n"
           ]
         }
       ]
@@ -299,12 +308,31 @@
     },
     {
       "cell_type": "code",
-      "source": [],
+      "source": [
+        "x=int(input(\"enter number\"))\n",
+        "if x % 2==0:\n",
+        "  print(\"even\")\n",
+        "else:\n",
+        "  print(\"odd\")\n"
+      ],
       "metadata": {
-        "id": "_e-yKHi4Y1L-"
+        "id": "_e-yKHi4Y1L-",
+        "outputId": "68ac0da6-50c5-486c-ff2c-66fb07078679",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
       },
-      "execution_count": null,
-      "outputs": []
+      "execution_count": 7,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "enter number85\n",
+            "odd\n"
+          ]
+        }
+      ]
     }
   ]
 }
