--- a/lAWANIYA.ipynb
+++ b/lAWANIYA.ipynb
@@ -4,7 +4,7 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "authorship_tag": "ABX9TyPF0bM8m5J82GGuwI35jeFF",
+      "authorship_tag": "ABX9TyN05avaj4AmkTmR2+bUjfKa",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -209,7 +209,7 @@
           "base_uri": "https://localhost:8080/"
         }
       },
-      "execution_count": 6,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -322,7 +322,7 @@
           "base_uri": "https://localhost:8080/"
         }
       },
-      "execution_count": 7,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -330,6 +330,53 @@
           "text": [
             "enter number85\n",
             "odd\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "print(\"----product details---\")\n",
+        "product1=\"bedsheet\"\n",
+        "product2=\"led lights\"\n",
+        "product3=\"room decor\"\n",
+        "price_of_product1=500\n",
+        "price_of_product2=400\n",
+        "price_of_product3=1000\n",
+        "print(product1, \"=\" ,price_of_product1)\n",
+        "print(product2, \"=\" ,price_of_product2)\n",
+        "print(product3, \"=\" ,price_of_product3)\n",
+        "print(\"--------\")\n",
+        "discount_on_bedsheet=50\n",
+        "discount_on_led_lights=40\n",
+        "discount_on_room_decor=100\n",
+        "print(\"discount on bedsheet = \",discount_on_bedsheet)\n",
+        "print(\"discount on led lights = \",discount_on_led_lights)\n",
+        "print(\"discount on room decor = \",discount_on_room_decor)\n",
+        "\n"
+      ],
+      "metadata": {
+        "id": "yHZ832K6bNWo",
+        "outputId": "00daa846-14e1-44c8-eeb3-bde178b34497",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
+      },
+      "execution_count": 6,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "----product details---\n",
+            "bedsheet = 500\n",
+            "led lights = 400\n",
+            "room decor = 1000\n",
+            "--------\n",
+            "discount on bedsheet =  50\n",
+            "discount on led lights =  40\n",
+            "discount on room decor =  100\n"
           ]
         }
       ]
