--- a/lAWANIYA.ipynb
+++ b/lAWANIYA.ipynb
@@ -4,7 +4,7 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "authorship_tag": "ABX9TyOfMqZFwb5z9NaijWaZN06p",
+      "authorship_tag": "ABX9TyO2j70b/UIpH+WkjIJSug9M",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -337,18 +337,98 @@
     {
       "cell_type": "code",
       "source": [
-        "product1=input(\"product1 = \")\n",
+        "product1= input(\"product1 = \")\n",
+        "price_of_product1= int(input(\"price = \"))\n",
+        "dis_on_product1= int(input(\"discount = \"))\n",
+        "discount_on_product1= price_of_product1*dis_on_product1/100\n",
+        "final_price_of_product1= price_of_product1-discount_on_product1\n",
+        "print(final_price_of_product1)\n",
+        "print(\"-----------------\")\n",
+        "\n",
         "product2=input(\"product2 = \")\n",
-        "product3=input(\"product3 = \")\n",
-        "price_of_product1=int(input(\"price of product1 = \"))\n",
         "price_of_product2=int(input(\"price of product2 = \"))\n",
-        "price_of_product3=int(input(\"price of product3 = \"))\n"
+        "dis_on_product2=int(input(\"discount = \"))\n",
+        "discount_on_product2=price_of_product2*dis_on_product2/100\n",
+        "final_price_of_product2=price_of_product2-discount_on_product2\n",
+        "print(final_price_of_product2)\n",
+        "print(\"----------------\")\n",
+        "\n",
+        "product3=input(\"product3 = \")\n",
+        "price_of_product3=int(input(\"price of product3 = \"))\n",
+        "dis_on_product3=int(input(\"discount = \"))\n",
+        "discount_on_product3=price_of_product3*dis_on_product3/100\n",
+        "final_price_of_product3=price_of_product3-discount_on_product3\n",
+        "print(final_price_of_product3)\n",
+        "print(\"----------------\")\n",
+        "\n",
+        "product4=input(\"product4 = \")\n",
+        "price_of_product_4=int(input(\"price of product4 = \"))\n",
+        "dis_on_product4=int(input(\"discount = \"))\n",
+        "discount_on_product4=price_of_product_4*dis_on_product4/100\n",
+        "final_price_of_product4=price_of_product_4-discount_on_product4\n",
+        "print(final_price_of_product4)\n",
+        "print(\"----------------\")\n",
+        "\n",
+        "total_bill=price_of_product1+price_of_product2+price_of_product3+price_of_product_4\n",
+        "payable_amount=final_price_of_product1+final_price_of_product2+final_price_of_product3+final_price_of_product4\n",
+        "print(\"total_bill = \",total_bill)\n",
+        "print(\"------\")\n",
+        "print(\"payable amount = \",payable_amount)\n",
+        "print(\"---------------------------\")\n",
+        "\n",
+        "print(\"__________delivery address__________\")\n",
+        "name=input(\"name = \")\n",
+        "address=input(\"address_ \")\n",
+        "mobile_no=int(input(\"mobile no_ \"))\n",
+        "print(\"______thank_you______\")\n",
+        "\n",
+        "\n"
       ],
       "metadata": {
-        "id": "Xv8TR77dsvcy"
+        "id": "sEcY0T7z7cfJ",
+        "outputId": "97480f6c-8768-455f-bf4b-1466c45f0796",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
       },
-      "execution_count": null,
-      "outputs": []
+      "execution_count": 3,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "product1 = smart watch\n",
+            "price = 1200\n",
+            "discount = 10\n",
+            "1080.0\n",
+            "-----------------\n",
+            "product2 = laptop\n",
+            "price of product2 = 38000\n",
+            "discount = 10\n",
+            "34200.0\n",
+            "----------------\n",
+            "product3 = mixer grinder\n",
+            "price of product3 = 1000\n",
+            "discount = 10\n",
+            "900.0\n",
+            "----------------\n",
+            "product4 = sun glasses\n",
+            "price of product4 = 850\n",
+            "discount = 10\n",
+            "765.0\n",
+            "----------------\n",
+            "total_bill =  41050\n",
+            "------\n",
+            "payable amount =  36945.0\n",
+            "---------------------------\n",
+            "__________delivery address__________\n",
+            "name = anshika\n",
+            "address_ chandigarh\n",
+            "mobile no_ 7302080109\n",
+            "______thank_you______\n"
+          ]
+        }
+      ]
     }
   ]
 }
