--- a/lAWANIYA.ipynb
+++ b/lAWANIYA.ipynb
@@ -4,7 +4,7 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "authorship_tag": "ABX9TyO2j70b/UIpH+WkjIJSug9M",
+      "authorship_tag": "ABX9TyOnLoKSfUYQ0peqcTQ61GS2",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -391,7 +391,7 @@
           "base_uri": "https://localhost:8080/"
         }
       },
-      "execution_count": 3,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -426,6 +426,181 @@
             "address_ chandigarh\n",
             "mobile no_ 7302080109\n",
             "______thank_you______\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "address=input(\"address_ \")"
+      ],
+      "metadata": {
+        "id": "bOKNegd_TPx1",
+        "outputId": "f935afd7-95db-4087-a32e-2de22d61e449",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
+      },
+      "execution_count": 6,
+      "outputs": [
+        {
+          "name": "stdout",
+          "output_type": "stream",
+          "text": [
+            "address_ 3345,sector21d,chandigarh\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "item1=input(\"item1: \")\n",
+        "price1=int(input(\"price: \"))\n",
+        "discount1=int(input(\"discount: \"))\n",
+        "discount_on_item1=price1*discount1/100\n",
+        "final_price_of_item1=price1-discount_on_item1\n",
+        "print(final_price_of_item1)\n",
+        "print(\"--------\")\n",
+        "\n",
+        "item2=input(\"item2: \")\n",
+        "price2=int(input(\"price: \"))\n",
+        "discount2=int(input(\"discount: \"))\n",
+        "discount_on_item2=price2*discount2/100\n",
+        "final_price_of_item2=price2-discount_on_item2\n",
+        "print(final_price_of_item2)\n",
+        "print(\"--------\")\n",
+        "\n",
+        "total_bill=price1+price2\n",
+        "total_discount=discount_on_item1+discount_on_item2\n",
+        "total_bill_after_discount=final_price_of_item1+final_price_of_item2\n",
+        "print(total_bill)\n",
+        "print(total_discount)\n",
+        "print(\"--------\")\n",
+        "print(total_bill_after_discount)\n",
+        "delivery_charges=int(input(\"delivery charges\"))\n",
+        "payable_amount=total_bill_after_discount+delivery_charges\n",
+        "print(delivery_charges)\n",
+        "print(\"--------\")\n",
+        "print(payable_amount)\n",
+        "print(\"------------------\")\n",
+        "\n",
+        "print(\"________delivery address________\")\n",
+        "name=input(\"name: \")\n",
+        "address=input(\"address_ \")\n",
+        "mobile_no=int(input(\"mobile no_ \"))\n",
+        "print(\"------------\")\n",
+        "\n",
+        "\n",
+        "\n",
+        "\n"
+      ],
+      "metadata": {
+        "id": "eGSXMpD2U5FE",
+        "outputId": "54963ec6-1ab6-4a3a-c1fe-cd8187db370b",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
+      },
+      "execution_count": 11,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "item1: pizza\n",
+            "price: 250\n",
+            "discount: 10\n",
+            "225.0\n",
+            "--------\n",
+            "item2: coke\n",
+            "price: 80\n",
+            "discount: 10\n",
+            "72.0\n",
+            "--------\n",
+            "330\n",
+            "33.0\n",
+            "--------\n",
+            "297.0\n",
+            "delivery charges60\n",
+            "60\n",
+            "--------\n",
+            "357.0\n",
+            "------------------\n",
+            "________delivery address________\n",
+            "name: vaishnavi\n",
+            "address_ 3345,sector21d,chandigarh\n",
+            "mobile no_ 7302080109\n",
+            "------------\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "colour=input(\"colour: \")\n",
+        "if colour==\"red\":\n",
+        "  print(\"stop\")\n",
+        "else:\n",
+        "  print(\"move\")"
+      ],
+      "metadata": {
+        "id": "3DRfpLhdh7C_",
+        "outputId": "76166601-46cc-4820-cbfd-328d1d44db28",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
+      },
+      "execution_count": 24,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "colour: red\n",
+            "stop\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "colour=input(\"colour: \")\n",
+        "if colour==\"yellow\" or \"blue\":\n",
+        "  print(\"happy\")\n",
+        "else:\n",
+        "  print(\"sad\")\n",
+        "print(\"--------\")\n",
+        "\n",
+        "colour=input(\"colour: \")\n",
+        "if colour==\"green\":\n",
+        "  print(\"stop\")\n",
+        "elif colour==\"pink\":\n",
+        "  print(\"stop\")\n",
+        "else:\n",
+        "  print(\"move\")\n"
+      ],
+      "metadata": {
+        "id": "ndN8ShUZlE2z",
+        "outputId": "5ed71bd9-8b2a-4237-9466-09126415d0bd",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
+      },
+      "execution_count": 26,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "colour: yellow\n",
+            "happy\n",
+            "--------\n",
+            "colour: white\n",
+            "move\n"
           ]
         }
       ]
