--- a/lAWANIYA.ipynb
+++ b/lAWANIYA.ipynb
@@ -4,7 +4,7 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "authorship_tag": "ABX9TyOnLoKSfUYQ0peqcTQ61GS2",
+      "authorship_tag": "ABX9TyMNORC7/7IzUWeMk/+BfNSG",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -49,6 +49,67 @@
         "first_number=10\n",
         "second_number=20\n",
         "print(first_number+second_number)"
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "first_number=50\n",
+        "second_number=60\n",
+        "third_number=70\n",
+        "sum=first_number+second_number+third_number\n",
+        "print(\"sum: \",sum)\n",
+        "print(\"______\")\n",
+        "subtract=first_number-second_number-third_number\n",
+        "print(\"sub: \",subtract)\n",
+        "\n"
+      ],
+      "metadata": {
+        "id": "x8t6Nd6ybVp4",
+        "outputId": "7337a49a-1904-4855-ea0c-fddbb611076f",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
+      },
+      "execution_count": 3,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "sum:  180\n",
+            "______\n",
+            "sub:  -80\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "number1=int(input(\"first number\"))\n",
+        "number2=int(input(\"second number\"))\n",
+        "total=number1+number2\n",
+        "print(total)"
+      ],
+      "metadata": {
+        "id": "t9IjMG48chkY",
+        "outputId": "30463c36-696d-42e3-c4c2-6261cafeed5e",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
+      },
+      "execution_count": 5,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "first number20\n",
+            "second number30\n",
+            "50\n"
+          ]
+        }
       ]
     },
     {
@@ -442,7 +503,7 @@
           "base_uri": "https://localhost:8080/"
         }
       },
-      "execution_count": 6,
+      "execution_count": null,
       "outputs": [
         {
           "name": "stdout",
@@ -503,7 +564,7 @@
           "base_uri": "https://localhost:8080/"
         }
       },
-      "execution_count": 11,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -553,7 +614,7 @@
           "base_uri": "https://localhost:8080/"
         }
       },
-      "execution_count": 24,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -590,7 +651,7 @@
           "base_uri": "https://localhost:8080/"
         }
       },
-      "execution_count": 26,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
